@@ -1,7 +1,19 @@
-#include <stddef.h>
-
 #ifndef LME4_CHOLMOD_H
 #define LME4_CHOLMOD_H
+
+#include <stddef.h>
+#include <limits.h>
+
+#define UF_long long
+#define UF_long_max LONG_MAX
+#define UF_long_id "%ld"
+#define UFSPARSE_DATE "Aug 31, 2006"
+#define UFSPARSE_VER_CODE(main,sub) ((main) * 1000 + (sub))
+#define UFSPARSE_MAIN_VERSION 2
+#define UFSPARSE_SUB_VERSION 1
+#define UFSPARSE_SUBSUB_VERSION 0
+#define UFSPARSE_VERSION \
+    UFSPARSE_VER_CODE(UFSPARSE_MAIN_VERSION,UFSPARSE_SUB_VERSION)
 
 #define CHOLMOD_INT 0		/* all integer arrays are int */
 #define CHOLMOD_INTLONG 1	/* most are int, some are long */
@@ -163,6 +175,10 @@ typedef struct cholmod_common_struct
 	 * If TRUE (the default case), a symmetric matrix is always returned in
 	 * upper-triangular form (A->stype = 1).  */
 
+    int quick_return_if_not_posdef ;	/* if TRUE, the supernodal numeric
+					 * factorization will return quickly if
+	* the matrix is not positive definite.  Default: FALSE. */
+
     /* ---------------------------------------------------------------------- */
     /* printing and error handling options */
     /* ---------------------------------------------------------------------- */
@@ -311,6 +327,21 @@ typedef struct cholmod_common_struct
 	    * Default: -1.  Note that this is not the default for COLAMD and
 	    * CCOLAMD.  -1 is best for Cholesky.  10 is best for LU.  */
 
+	double nd_oksep ;   /* in NESDIS, when a node separator is computed, it
+			     * discarded if nsep >= nd_oksep*n, where nsep is
+	    * the number of nodes in the separator, and n is the size of the
+	    * graph being cut.  Valid range is 0 to 1.  If 1 or greater, the
+	    * separator is discarded if it consists of the entire graph.
+	    * Default: 1 */
+
+	double other1 [4] ; /* future expansion */
+
+	size_t nd_small ;    /* do not partition graphs with fewer nodes than
+			     * nd_small, in NESDIS.  Default: 200 (same as
+			     * METIS) */
+
+	size_t other2 [4] ; /* future expansion */
+
 	int aggressive ;    /* Aggresive absorption in AMD, COLAMD, SYMAMD,
 			     * CCOLAMD, and CSYMAMD.  Default: TRUE */
 
@@ -325,18 +356,24 @@ typedef struct cholmod_common_struct
 	int nd_compress ;   /* If TRUE, compress the graph and subgraphs before
 			     * partitioning them in NESDIS.  Default: TRUE */
 
-	size_t nd_small ;    /* do not partition graphs with fewer nodes than
-			     * nd_small, in NESDIS.  Default: 200 (same as
-			     * METIS) */
-
-	int nd_camd ;	    /* If TRUE, follow the nested dissection ordering
+	int nd_camd ;	    /* If 1, follow the nested dissection ordering
 			     * with a constrained minimum degree ordering that
-	    * respects the partitioning just found.  If you set nd_small very
-	    * small, you may not need this ordering, and can save time by
-	    * turning it off.  Default: TRUE. */
+	    * respects the partitioning just found (using CAMD).  If 2, use
+	    * CSYMAMD instead.  If you set nd_small very small, you may not need
+	    * this ordering, and can save time by setting it to zero (no
+	    * constrained minimum degree ordering).  Default: 1. */
+
+	int nd_components ; /* The nested dissection ordering finds a node
+			     * separator that splits the graph into two parts,
+	    * which may be unconnected.  If nd_components is TRUE, each of
+	    * these connected components is split independently.  If FALSE,
+	    * each part is split as a whole, even if it consists of more than
+	    * one connected component.  Default: FALSE */
 
 	/* fill-reducing ordering to use */
 	int ordering ;
+
+	size_t other3 [4] ; /* future expansion */
 
     } method [CHOLMOD_MAXMETHODS + 1] ;
 
@@ -444,7 +481,7 @@ typedef struct cholmod_common_struct
      */
 
     size_t nrow ;	/* size of Flag and Head */
-    long mark ;		/* mark value for Flag array */
+    UF_long mark ;	/* mark value for Flag array */
     size_t iworksize ;	/* size of Iwork.  Upper bound: 6*nrow+ncol */
     size_t xworksize ;	/* size of Xwork,  in bytes.
 			 * maxrank*nrow*sizeof(double) for update/downdate.
@@ -469,7 +506,7 @@ typedef struct cholmod_common_struct
     void *Iwork ;	/* size iworksize, 2*nrow+ncol for most routines,
 			 * up to 6*nrow+ncol for cholmod_analyze. */
 
-    int itype ;		/* If CHOLMOD_LONG, Flag, Head, and Iwork are long.
+    int itype ;		/* If CHOLMOD_LONG, Flag, Head, and Iwork are UF_long.
 			 * Otherwise all three arrays are int. */
 
     int dtype ;		/* double or float */
@@ -478,6 +515,12 @@ typedef struct cholmod_common_struct
 	 * sparse matrices, triplet matrices, dense matrices, and factors
 	 * created using this Common struct.  The itypes and dtypes of all
 	 * parameters to all CHOLMOD routines must match.  */
+
+    int no_workspace_reallocate ;   /* this is an internal flag, used as a
+	* precaution by cholmod_analyze.  It is normally false.  If true,
+	* cholmod_allocate_work is not allowed to reallocate any workspace;
+	* they must use the existing workspace in Common (Iwork, Flag, Head,
+	* and Xwork).  Added for CHOLMOD v1.1 */
 
     /* ---------------------------------------------------------------------- */
     /* statistics */
@@ -499,6 +542,43 @@ typedef struct cholmod_common_struct
     size_t memory_usage ;   /* peak memory usage in bytes */
     size_t memory_inuse ;   /* current memory usage in bytes */
 
+    double nrealloc_col ;   /* # of column reallocations */
+    double nrealloc_factor ;/* # of factor reallocations due to col. reallocs */
+    double ndbounds_hit ;   /* # of times diagonal modified by dbound */
+
+    double rowfacfl ;	    /* # of flops in last call to cholmod_rowfac */
+    double aatfl ;	    /* # of flops to compute A(:,f)*A(:,f)' */
+
+    /* ---------------------------------------------------------------------- */
+    /* future expansion */
+    /* ---------------------------------------------------------------------- */
+
+    /* To allow CHOLMOD to be updated without recompiling the user application,
+     * additional space is set aside here for future statistics, parameters,
+     * and workspace.  Note:  additional entries were added in v1.1 to the
+     * method array, above, and thus v1.0 and v1.1 are not binary compatible.
+     *
+     * v1.1 and v1.2 are binary compatible.
+     */
+
+    double  other1 [16] ;
+    UF_long other2 [16] ;
+    int     other3 [14] ;   /* reduced from size 16 in v1.1. */
+
+    /* control parameter (added for v1.2): */
+    int default_nesdis ;    /* Default: FALSE.  If FALSE, then the default
+			     * ordering strategy (when Common->nmethods == 0)
+	* is to try the given ordering (if present), AMD, and then METIS if AMD
+	* reports high fill-in.  If Common->default_nesdis is TRUE then NESDIS
+	* is used instead in the default strategy. */
+
+    /* statistic (added for v1.2): */
+    int called_nd ;	    /* TRUE if the last call to
+			     * cholmod_analyze called NESDIS or METIS. */
+
+    size_t  other4 [16] ;
+    void   *other5 [16] ;
+
 } cholmod_common ;
 
 typedef struct cholmod_sparse_struct
@@ -507,7 +587,7 @@ typedef struct cholmod_sparse_struct
     size_t ncol ;
     size_t nzmax ;	/* maximum number of entries in the matrix */
 
-    /* pointers to int or long: */
+    /* pointers to int or UF_long: */
     void *p ;		/* p [0..ncol], the column pointers */
     void *i ;		/* i [0..nzmax-1], the row indices */
 
@@ -540,14 +620,14 @@ typedef struct cholmod_sparse_struct
 	*/
 
     int itype ;		/* CHOLMOD_INT:     p, i, and nz are int.
-			 * CHOLMOD_INTLONG: p is long, i and nz are int.
-			 * CHOLMOD_LONG:    p, i, and nz are long.  */
+			 * CHOLMOD_INTLONG: p is UF_long, i and nz are int.
+			 * CHOLMOD_LONG:    p, i, and nz are UF_long.  */
 
     int xtype ;		/* pattern, real, complex, or zomplex */
     int dtype ;		/* x and z are double or float */
     int sorted ;	/* TRUE if columns are sorted, FALSE otherwise */
-    int packed ;	/* TRUE if packed (nz must present), FALSE otherwise
-			 * (nz is ignored) */
+    int packed ;	/* TRUE if packed (nz ignored), FALSE if unpacked
+			 * (nz is required) */
 
 } cholmod_sparse ;
 
@@ -665,8 +745,8 @@ typedef struct cholmod_factor_struct
     int itype ;		/* The integer arrays are Perm, ColCount, p, i, nz,
 			 * next, prev, super, pi, px, and s.  If itype is
 			 * CHOLMOD_INT, all of these are int arrays.
-			 * CHOLMOD_INTLONG: p, pi, px are long, all others int.
-			 * CHOLMOD_LONG:    all integer arrays are long. */
+			 * CHOLMOD_INTLONG: p, pi, px are UF_long, others int.
+			 * CHOLMOD_LONG:    all integer arrays are UF_long. */
     int xtype ;		/* pattern, real, complex, or zomplex */
     int dtype ;		/* x and z double or float */
 
